--- a/main.html
+++ b/main.html
@@ -10,7 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<form method="post">
+	<label for="name">Name</label>
+	<input type="text" id="name" required><br><br>
+	<label for="email">Email</label>
+	<input type="email" id="email" required><br><br>
+	<label for="gender">Gender</label><br>
+	<label for="male">Male</label>
+	<input type="radio" name="name" value="male" required>
+	<label for="female">Female</label>
+	<input type="radio" name="name" value="female" required><br><br>
+	<label for="cb">Car Brands</label>
+	<select name="cb" id="cars" multiple>
+		<option value="BMW">BMW</option>
+		<option value="Audi">Audi</option>
+		<option value="Mercedez">Mercedes</option>
+	</select><br><br>
+	<label for="carage">Car Age</label>
+	<input type="number" id="carage" required><br><br>
+	<label for="dop">Date of Purchase</label>
+	<input type="date" id="dop" required><br><br>
+	<label for="password">Password</label>
+	<input type="password" id="password" required><br><br>
+	<button>submit</button>
 </body>
 
 </html>
