--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
 	<input type="email" id="email" required><br><br>
 	<label for="gender">Gender</label><br>
 	<label for="male">Male</label>
-	<input type="radio" name="name" value="male" required>
+	<input type="radio" name="gender" value="male" required>
 	<label for="female">Female</label>
-	<input type="radio" name="name" value="female" required><br><br>
-	<label for="cb">Car Brands</label>
-	<select name="cb" id="cars" multiple>
+	<input type="radio" name="gender" value="female" required><br><br>
+	<label for="cars">Car Brands</label>
+	<select name="cars" id="cars" multiple>
 		<option value="BMW">BMW</option>
 		<option value="Audi">Audi</option>
 		<option value="Mercedez">Mercedes</option>
@@ -32,7 +32,8 @@
 	<input type="date" id="dop" required><br><br>
 	<label for="password">Password</label>
 	<input type="password" id="password" required><br><br>
-	<button>submit</button>
+	<input type="submit" value="submit">
+</form>
 </body>
 
 </html>
