--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
 	<input type="date" id="dop" required><br><br>
 	<label for="password">Password</label>
 	<input type="password" id="password" required><br><br>
-	<input type="submit" value="submit">
+	<button type="submit">Submit</button>
 </form>
 </body>
 
